libtlafmt/src/ast_format/snapshots/libtlafmt__ast_format__module__tests__module_header_even_odd_length-2.snap
---
source: libtlafmt/src/ast_format/module.rs
expression: output
---
---------------------------------- MODULE AB -----------------------------------
================================================================================
