libtlafmt/src/ast_format/snapshots/libtlafmt__ast_format__module__tests__module_header_length_normalisation.snap
---
source: libtlafmt/src/ast_format/module.rs
expression: output
---
Some bananas
------------------------- MODULE DifferentialEquations -------------------------
LOCAL X == 42
================================================================================
