libtlafmt/src/ast_format/snapshots/libtlafmt__ast_format__module__tests__module_header_length_trim.snap
---
source: libtlafmt/src/ast_format/module.rs
expression: output
---
------------------------- MODULE DifferentialEquations -------------------------
================================================================================
