libtlafmt/src/ast_format/snapshots/libtlafmt__ast_format__module__tests__newline_squashing.snap
---
source: libtlafmt/src/ast_format/module.rs
expression: output
---
----------------------------------- MODULE A -----------------------------------
LOCAL C == 42
LOCAL A == 42

\* Comment

LOCAL T == 13
(* Another *)

(* BANANAS *)
LOCAL S == 24

================================================================================
